--- a/app/src/main/res/layout/details_contact_activity.xml
+++ b/app/src/main/res/layout/details_contact_activity.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="contact"
             type="fr.dleurs.android.contactapp.model.Contact" />
@@ -28,20 +29,25 @@
 
         <ImageButton
             android:id="@+id/ibEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
+            android:background="@drawable/roundcorner"
+            android:tint="@color/white"
+            app:layout_constraintCircleRadius="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_edit" />
 
         <ImageButton
             android:id="@+id/ibDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
+            android:background="@drawable/roundcorner"
+            android:tint="@color/white"
             app:layout_constraintEnd_toStartOf="@+id/ibEdit"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_delete" />
@@ -63,6 +69,7 @@
             android:layout_marginTop="220dp"
             android:text="@{contact.lastName}"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/tvFirstName"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Lastname"></TextView>
@@ -74,6 +81,7 @@
             android:layout_marginTop="220dp"
             android:text="@{contact.firstName}"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/ivProfile"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Firstname"></TextView>
@@ -103,6 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
+                android:background="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
